# uiur

./: .env  .gitignore  DOCKER_IMAGE_REQUEST.md  README.md  config.py  db_schema.sql  embedder.py  ingest_intents.py  intents.yaml  main.py  pyproject.toml  quality_checks.py  query_intent.py  requirements.txt  test_intent_matching.py
api/: note.txt
database/: db.sh  db_schema.sql  db_writer.py  docker-compose.yml
embedding-service/: .gitignore  main.py  requirements.txt
embedding-service/app/: embedder.py  routes.py
embeddings/: normalizer.py
intent-service/: main.py
intent-service/app/: config.py  embedding_client.py  ingestion.py  normalizer.py  retrieval.py
intent-service/app/database/: connection.py  repository.py
intent-service/app/routes/: catalog.py  user.py
tests/: verify_embeddings.py
