[project]
name = "uiur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.20.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pgvector>=0.2.5",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
    "spacy>=3.7",
    "umap-learn>=0.5",
]
